--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,29 @@
-Cerberus==1.3.1
-PyYAML==5.1.1
-boto3==1.9.180
-botocore==1.12.180
-click==7.0
-click-pathlib==2019.6.13.1
-cryptography==3.2.1
-docker==4.0.2
+Cerberus==1.3.5
+PyYAML==6.0.1
+boto3==1.28.68
+botocore==1.31.68
+click==8.1.7
+click-pathlib==2020.3.13.0
+cryptography==41.0.4
+docker==6.1.3
 docopt==0.6.2
-google-api-python-client==1.7.12
+google-api-python-client==2.104.0
 oauth2client==4.1.3
-paramiko==2.6.0
-passlib==1.7.1
-pytest==5.0.0
-python-vagrant==0.5.15
-requests==2.22.0
+paramiko==3.3.1
+passlib==1.7.4
+pytest==7.4.2
+python-vagrant==1.0.0
+requests==2.31.0
 retry==0.9.2
-retrying==1.3.3
-sarge==0.1.6
-semver==2.8.1
+retrying==1.3.4
+sarge==0.1.7.post1
+semver==3.0.2
 # We use >= rather than == because Homebrew PyPI poet
 # https://github.com/tdsmith/homebrew-pypi-poet/blob/master/poet/poet.py
 # does not pin setuptools.
 # Use <45 for https://github.com/pypa/setuptools/issues/1963
 setuptools>=41.0.1,<45
-timeout-decorator==0.4.1
-tqdm==4.32.2
-urllib3==1.25.3
-halo==0.0.29
+timeout-decorator==0.5.0
+tqdm==4.66.1
+urllib3==2.0.7
+halo==0.0.31
